--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
+    "node-fetch": "^1.6.3",
     "serve-favicon": "~2.4.2"
   }
 }
