--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
+    "fieldbook-client": "^1.0.7",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
     "node-fetch": "^1.6.3",
