--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dw-site",
   "version": "0.0.0",
   "private": true,
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -15,6 +16,19 @@
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
     "node-fetch": "^1.6.3",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+        "es6-promise": "^4.0.5",
+    "isomorphic-fetch": "^2.2.1"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "sourceMaps": true,
+    "retainLines": true
   }
 }
